-	Correction d'alignement des liens dans le div patterns_list

--- a/public/stylesheets/generic.css
+++ b/public/stylesheets/generic.css
@@ -140,6 +140,7 @@ div#copyright_notice{
 div#patternList li {
 	text-indent: 0em;
 	font-size: 0.9em;
+	text-align: left;
 }
 
 div#patternList h3 {
